# yaza

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE-MIT  LICENSE-MIT_SUSHI.md  README.md  build.gradle.kts  cmake-android.sh  meson_cross.txt.in  settings.gradle.kts
inc/: common.hpp  compositor.hpp  log.hpp  region.hpp  remote.hpp  renderer.hpp  server.hpp  surface.hpp  xdg_shell.hpp  xdg_surface.hpp  xdg_toplevel.hpp
inc/input/: bounded_object.hpp  input_listen_server.hpp  ray_caster.hpp  seat.hpp  server_seat.hpp
inc/remote/: loop.hpp  remote.hpp  session.hpp
inc/util/: box.hpp  convert.hpp  data_pool.hpp  intersection.hpp  signal.hpp  time.hpp  visitor_list.hpp  weak_resource.hpp  weakable_unique_ptr.hpp
inc/wayland/: compositor.hpp  keyboard.hpp  output.hpp  pointer.hpp  region.hpp  seat.hpp  surface.hpp  wayland.hpp
inc/wayland/data_device/: data_device.hpp  data_device_manager.hpp  data_offer.hpp  data_source.hpp
inc/wayland/seat/: input_listen_server.hpp  pointer.hpp  seat.hpp
inc/xdg_shell/: xdg_popup.hpp  xdg_positioner.hpp  xdg_shell.hpp  xdg_surface.hpp  xdg_toplevel.hpp  xdg_wm_base.hpp
inc/zwin/: bounded.hpp  compositor.hpp  expansive.hpp  ray.hpp  region.hpp  seat.hpp  shell.hpp  virtual_object.hpp  zwin.hpp
inc/zwin/gles_v32/: gl_base_technique.hpp  gl_buffer.hpp  gl_program.hpp  gl_sampler.hpp  gl_shader.hpp  gl_texture.hpp  gl_vertex_array.hpp  gles_v32.hpp  rendering_unit.hpp
inc/zwin/gles_v32/base_technique/: draw_api_args.hpp  texture_binding.hpp  uniform_variables.hpp
inc/zwin/shm/: shm.hpp  shm_buffer.hpp  shm_pool.hpp  shm_util.hpp
src/: compositor.cpp  log.cpp  main.cpp  region.cpp  remote.cpp  renderer.cpp  server.cpp  surface.cpp  xdg_shell.cpp  xdg_surface.cpp  xdg_toplevel.cpp
src/input/: input_listen_server.cpp  ray_caster.cpp  seat.cpp  server_seat.cpp
src/main/: AndroidManifest.xml
src/remote/: loop.cpp  remote.cpp  session.cpp
src/util/: convert.cpp  data_pool.cpp  intersection.cpp  time.cpp  weak_resource.cpp
src/wayland/: compositor.cpp  keyboard.cpp  output.cpp  pointer.cpp  region.cpp  seat.cpp  surface.cpp  wayland.cpp
src/wayland/data_device/: data_device.cpp  data_device_manager.cpp  data_offer.cpp  data_source.cpp
src/wayland/seat/: input_listen_server.cpp  pointer.cpp  seat.cpp
src/xdg_shell/: xdg_popup.cpp  xdg_positioner.cpp  xdg_shell.cpp  xdg_surface.cpp  xdg_toplevel.cpp  xdg_wm_base.cpp
src/zwin/: bounded.cpp  compositor.cpp  expansive.cpp  gles_v32.cpp  ray.cpp  region.cpp  seat.cpp  shell.cpp  shm.cpp  virtual_object.cpp  zwin.cpp
src/zwin/gles_v32/: gl_base_technique.cpp  gl_buffer.cpp  gl_program.cpp  gl_sampler.cpp  gl_shader.cpp  gl_texture.cpp  gl_vertex_array.cpp  gles_v32.cpp  rendering_unit.cpp
src/zwin/gles_v32/base_technique/: draw_api_args.cpp  texture_binding.cpp  uniform_variables.cpp
src/zwin/shm/: LICENSE.md  shm.cpp  shm_buffer.cpp  shm_pool.cpp  shm_util.cpp
